     request if data is truncated
  - client script - exit with error code if the request is unsuccessful
  - server - only set trailers if the client declared that it accepts them
  - restrict request types handled by teh server to GET and OPTIONS
  - add a separate handler for OPTIONS request, set CORS headers
  - read-only configuration when options are read from a command line

release 0.3.0
  - publish as npm package
  - expand docs for installing and running client/server
  - upgrade mongodb from 2.2.4 to 2.2.8
  - upgrade grunt-jasmine-nodejs from 1.5.3 to 1.5.4
  - upgrade load-grunt-tasks from 'latest' to 3.5.2
  - fix wrongly reporting error while closing fd in client
  - compliance with the GA4GH API: redirection urls as objects
  - restructure documentation
  - upgrading moment to 2.14.1 from 2.13.0
  - upgrading grunt-jscs to 3.0.1 from 3.0.0
  - new client code to comply with GA4GH API
  - client code fit to use with browserify

release 0.2.1
  - compliance with the GA4GH API: use upper case for format

release 0.2.0
  - application model and controller as separate modules
  - GA4GH API url and redirection
  - logging with Winston

release 0.1.1
  - HTTP errors compliant with GA4GH API.

release 0.1
  - Initial version:
    a node.js server running on a socket or on a port serving
      either individual files or merging all available files
      for a sample,
    a range to serve and data format to serve can be specified,
    mongodb is used to find file locations,
    authorization is switched on by default (can be disabled),
      relies on authentication done elsewhere (the incoming request
      should have X-Remote-User header set), so this server
      should be run behind a reverse proxy that will perform
      authentication and set the header,
    'data_truncated' trailer header is set to 'false' if the data
      processing pipeline completed successfully, in case of an
      error in the pipeline it is set to 'true'.
