@@ -28,12 +28,6 @@ const HttpError   = require('./http/error.js');
 const trailer     = require('./http/trailer.js');
 const config      = require('../config.js');
 
-
-const PROTOCOL_SEPARATOR = ':';
-const DEFAULT_PROTOCOL   = 'http' + PROTOCOL_SEPARATOR;
-const CUSTOM_FORWARDED_HEADER_NAME   = 'x-forwarded-host-suffix';
-const FORWARDED_PROTOCOL_HEADER_NAME = 'x-forwarded-proto';
-
 /** Application controller */
 class RangerController {
 
@@ -86,6 +80,11 @@ class RangerController {
     return m == 'GET' || m == 'OPTIONS';
   }
 
+  _trimURL(url) {
+    // Trim trailing forward slashes
+    return url.replace(/\/*$/, '');
+  }
+
   _setCORSHeaders() {
 
     let options = config.provide();
@@ -93,7 +92,7 @@ class RangerController {
 
     let requestOrigin = this.request.headers.origin;
     if (requestOrigin) {
-      requestOrigin = requestOrigin.replace(/\/*$/, '');
+      requestOrigin = this._trimURL(requestOrigin);
       let allowedOrigin = '';
       if (options.get('anyorigin')) {
         allowedOrigin = '*';
@@ -263,34 +262,27 @@ class RangerController {
     return url;
   }
 
-  _serverUrlFromRequest() {
+  _serverUrlFromRequest(protocol) {
     let urlObj = url.parse(this.request.url, false);
-    ['query', 'search', 'path', 'pathname', 'href'].forEach((key) => {
-      urlObj[key] = undefined;
-    });
+    ['query', 'search', 'path', 'pathname', 'href']
+      .forEach((key) => { urlObj[key] = undefined;});
     urlObj.slashes  = true;
+    // Server URL is impossible to get from anywhere else
     urlObj.host     = this.request.headers.host;
-    urlObj.protocol = DEFAULT_PROTOCOL;
+    urlObj.protocol = protocol;
     return url.format(urlObj);
   }
 
-  _serverUrlFromForwardedHeaders() {
-    let serverUrl;
-    let key = 'x-forwarded-host';
-    if (this.request.headers[key]) {
-      serverUrl = this.request.headers[key];
-      key = CUSTOM_FORWARDED_HEADER_NAME;
-      if (this.request.headers[key]) {
-        serverUrl += this.request.headers[key];
-      }
-      let protocol = this.request.headers[FORWARDED_PROTOCOL_HEADER_NAME]
-        || DEFAULT_PROTOCOL;
-      if (!protocol.endsWith(PROTOCOL_SEPARATOR)) {
-        protocol += PROTOCOL_SEPARATOR;
-      }
-      serverUrl = protocol + '//' + serverUrl;
+  _serverUrlFromProxy(knownProxies) {
+    let fhost = this.request.headers['x-forwarded-host'];
+    if (!fhost) {
+      throw new Error('Bypassing proxy server is not allowed');
     }
-    return serverUrl;
+    fhost = this._trimURL(fhost);
+    if (Object.keys(knownProxies).indexOf(fhost) < 0) {
+      throw new Error(`Unknown proxy ${fhost}`);
+    }
+    return knownProxies[fhost];
   }
 
   _redirect(id, query) {
@@ -304,19 +296,30 @@ class RangerController {
       this.errorResponse(this.response, 422, err.message);
     }
     if (url) {
-      let serverUrl = this._serverUrlFromForwardedHeaders()
-        || this._serverUrlFromRequest();
-      let reply = {};
-      reply.urls   = [{url: serverUrl + url}];
-      reply.format = query.format;
-      let redirect = JSON.stringify(reply);
-      LOGGER.debug('JSON produced ' + redirect);
-      this.response.removeHeader('Transfer-Encoding');
-      this.response.writeHead(200, 'OK, see redirection instructions in the body of the message', {
-        'Content-Length': redirect.length,
-        'Content-Type':   'application/json'});
-      this.response.write(redirect);
-      this.response.end();
+      let c = config.provide();
+      let plist = c.get('proxylist');
+      let serverUrl;
+      try {
+        serverUrl = plist
+          ? this._serverUrlFromProxy(plist)
+          : this._serverUrlFromRequest(c.get('protocol'));
+      } catch (err) {
+        this.errorResponse(this.response, 422, err.message);
+      }
+      if (serverUrl) {
+        let reply = {};
+        reply.urls   = [{url: serverUrl + url}];
+        reply.format = query.format;
+        let redirect = JSON.stringify(reply);
+        LOGGER.debug('JSON produced ' + redirect);
+        this.response.removeHeader('Transfer-Encoding');
+        this.response.writeHead(
+          200, 'OK, see redirection instructions in the body of the message', {
+            'Content-Length': redirect.length,
+            'Content-Type':   'application/json'});
+        this.response.write(redirect);
+        this.response.end();
+      }
     }
   }
 
